--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.7.4"
+    "@webpack-cli/serve": "^1.6.1",
+    "webpack-dev-server": "~3"
   }
 }
