--- a/config/database.yml
+++ b/config/database.yml
@@ -85,3 +85,4 @@ production:
     username: <%= ENV["POSTGRES_USER"] %>
     password: <%= ENV["POSTGRES_PASSWORD"] %>
     host: <%= ENV["DB_HOST"] %>
+    port: 5433
