--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -21,8 +21,7 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: renodor.co
-  app_port: 3000
+  host: 82.25.116.211
 
 # Credentials for your image host.
 registry:
