--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -20,7 +20,7 @@ servers:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
-  ssl: true
+  ssl: false
   host: 82.25.116.211
 
 # Credentials for your image host.
