--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -20,9 +20,8 @@ servers:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
-  ssl: false
-  host: 82.25.116.211
-  app_port: 80
+  ssl: true
+  host: renodor.co
 
 # Credentials for your image host.
 registry:
