--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -21,7 +21,9 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: renodor.co
+  hosts:
+    - renodor.co
+    - www.renodor.co
 
 # Credentials for your image host.
 registry:
